# autogram.py

./: .gitignore  .replit  README.md  autogram.c  autogram.py  autograms.txt  occurences-only.py  pyproject.toml  requirements.txt  thousand.txt
src/: autogram.py
