[tool.poetry]
name = "autogram.py"
version = "1.0.0"
description = "Self-enumerating pangram (\"autogram\") generator!"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64"
psutil = "^5.9"
humanize = "^4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "chromium"
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
coalesce_brackets = true
dedent_closing_brackets = true
indent_dictionary_value = true
spaces_around_default_or_named_assign = true
spaces_before_comment = 1
space_between_ending_comma_and_closing_bracket = true
split_all_top_level_comma_separated_values = true
