[tool.poetry]
name = "autogram.py"
version = "1.0.0"
description = "Self-enumerating pangram (\"autogram\") generator!"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.8"
humanize = "^4.0.0"
psutil = "^5.9.0"
tqdm = "^4.64.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2
format.line-ending = "lf"
target-version = "py310"
line-length = 160
preview = true

[tool.ruff.lint]
select = ["F", "E", "W", "N", "UP", "B", "SIM", "PD", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "RUF"]
ignore = ["E111", "E114","Q", "W293", "E261", "PLR2004", "PLR0912"]

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 160
from_first = true
indent = "  "
